# ComputationalClaster

./: .gitignore  README.md
Cw01/: CMakeLists.txt
Cw01/src/: Client.c  Definitions.h  Server.c
Cw02/src/: Client.c  Definitions.h  Server.c
